Установлен и настроен аппендер для log4net для отправки сообщений в Loki

--- a/FlexberrySampleLogging/ODataBackend/App.config
+++ b/FlexberrySampleLogging/ODataBackend/App.config
@@ -22,10 +22,23 @@
         <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
       </layout>
     </appender>
+    <appender name="LokiAppender" type="log4net.Appender.LokiAppender, log4net.Appender.Loki">
+      <BufferSize  value="1" />
+      <ServiceUrl value="http://localhost:3100" />
+      <label>
+        <key value="environment" />
+        <value value="debug" />
+      </label>
+      <label>
+        <key value="app" />
+        <value value="FlexberrySampleLogging" />
+      </label>
+    </appender>
     <root>
       <level value="DEBUG" />
       <appender-ref ref="LogFileAppender" />
       <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="LokiAppender" />
     </root>
   </log4net>
 </configuration>
