--- a/FlexberrySampleLogging/ODataBackend/FlexberrySampleLogging.ODataBackend.csproj
+++ b/FlexberrySampleLogging/ODataBackend/FlexberrySampleLogging.ODataBackend.csproj
@@ -14,6 +14,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="log4net.LokiAppender" Version="1.0.5" />
     <PackageReference Include="NewPlatform.Flexberry.StyleCopRuleset" Version="1.0.0"></PackageReference>
     <PackageReference Include="NewPlatform.Flexberry.ORM.ODataService" Version="7.0.0"></PackageReference>
     <PackageReference Include="NewPlatform.Flexberry.LockService" Version="3.0.0"></PackageReference>
