--- a/Docker/GrafanaLoki/Dockerfile.Loki
+++ b/Docker/GrafanaLoki/Dockerfile.Loki
@@ -1,3 +1,3 @@
 ﻿FROM grafana/loki:2.7.4
 
-COPY GrafanaLoki/Dockerfiles/loki-config.yaml /etc/loki/loki-config.yaml
+COPY GrafanaLoki/loki-config.yaml /etc/loki/loki-config.yaml
