App.config loki network

--- a/FlexberrySampleLogging/ODataBackend/App.config
+++ b/FlexberrySampleLogging/ODataBackend/App.config
@@ -24,7 +24,7 @@
     </appender>
     <appender name="LokiAppender" type="log4net.Appender.LokiAppender, log4net.Appender.Loki">
       <BufferSize  value="1" />
-      <ServiceUrl value="http://localhost:3100" />
+      <ServiceUrl value="http://loki:3100" />
       <label>
         <key value="environment" />
         <value value="debug" />
