--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - UploadUrl=Uploads
       - BackendRoot=https://localhost
       - DefConnStr=SERVER=app-postgres-db;User ID=flexberryuser;Password=jhv;Port=5432;database=appdb;
+    networks:
+      - loki
 
   app-postgres-db:
     image: flexberrysamplelogging/postgre-sql
