--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - loki
 
   loki:
-    image: flexberry/loki
+    image: flexberrysamplelogging/loki
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
