--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -29,17 +29,27 @@ services:
   loki:
     image: flexberrysamplelogging/loki
     ports:
-      - "3100:3100"
+      - 3100:3100
     command: -config.file=/etc/loki/local-config.yaml
     networks:
       - loki
     volumes:
       - LOKIDB:/loki
+      
+  promtail:
+    image: flexberrysamplelogging/promtail
+    ports:
+      - 1514:1514
+    volumes:
+      - /var/log:/var/log
+    command: -config.file=/etc/promtail/promtail-config.yaml
+    networks:
+      - loki
 
   grafana:
     image: grafana/grafana:latest
     ports:
-      - "3000:3000"
+      - 3000:3000
     environment:
       GF_SECURITY_ADMIN_PASSWORD: usr123
       GF_SECURITY_ADMIN_USER: admin
