--- a/FlexberrySampleLogging/ODataBackend/appsettings.json
+++ b/FlexberrySampleLogging/ODataBackend/appsettings.json
@@ -7,6 +7,13 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "SyslogSettings": {
+      "Server": "promtail",
+      "Port": "1514",
+      "Facility": "16",
+      "Version": "1",
+      "AppName": "MyTestApp"
     }
   },
   "AllowedHosts": "*"
